<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="130dp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:gravity="center_vertical">

            <EditText
                android:id="@+id/etCantidad"
                android:layout_width="75dp"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:background="@drawable/custom_edit_text"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/cantidad"
                android:inputType="number"
                android:textColorHint="#546E7A"
                android:textSize="14sp"
                tools:ignore="Autofill,TextContrastCheck" />

            <EditText
                android:id="@+id/etUnidad"
                android:layout_width="75dp"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:background="@drawable/custom_edit_text"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/unidades"
                android:inputType="text"
                android:textColorHint="#546E7A"
                android:textSize="14sp"
                tools:ignore="Autofill,TextContrastCheck" />

            <ImageButton
                android:id="@+id/ibMenos"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="48dp"
                android:background="@drawable/boton_minus_selector"
                android:contentDescription="@string/menos" />

            <ImageButton
                android:id="@+id/ibMas"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/boton_add_selector"
                android:contentDescription="@string/mas"
                android:visibility="visible" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvUnidad"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/unidades"
                android:textAllCaps="true"
                android:textSize="16sp" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/cpLitros"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/litros" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/cpKilos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kilogramos" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/cpMili"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mililitros" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/cpGramos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gramos" />
            </com.google.android.material.chip.ChipGroup>
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>