<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.crear_producto.CrearProductoFragment">

    <TextView
        android:id="@+id/tvNuevoProducto"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/introduce_los_datos_del_nuevo_producto"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvNombreProducto"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="16dp"
        android:labelFor="@+id/etNombre"
        android:text="@string/nombre"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/etNombre"
        app:layout_constraintStart_toStartOf="@+id/tvImagen"
        app:layout_constraintTop_toBottomOf="@+id/ibImgProducto" />

    <EditText
        android:id="@+id/etDescripcion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:autofillHints=""
        android:hint="@string/descripcion_hint"
        android:inputType="text|textMultiLine"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvDescProducto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/etNombre"
        tools:ignore="LabelFor,TextContrastCheck" />

    <TextView
        android:id="@+id/tvDescProducto"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="16dp"
        android:gravity="center_vertical"
        android:labelFor="@+id/etDescripcion"
        android:text="@string/descripcion"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/etDescripcion"
        app:layout_constraintStart_toStartOf="@+id/tvNombreProducto"
        app:layout_constraintTop_toBottomOf="@+id/tvNombreProducto" />

    <TextView
        android:id="@+id/tvPrecioProd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="16dp"
        android:gravity="center_vertical"
        android:text="@string/precio_nuevo"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/etPrecio"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDescProducto" />

    <EditText
        android:id="@+id/etPrecio"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:hint="@string/precio_hint"
        android:inputType="number|numberDecimal"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvPrecioProd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/etDescripcion"
        tools:ignore="Autofill,TextContrastCheck" />

    <EditText
        android:id="@+id/etNombre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:hint="@string/nombre_producto"
        android:inputType="text"
        android:labelFor="@+id/etNombre"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvNombreProducto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/ibImgProducto"
        tools:ignore="Autofill,TextContrastCheck" />

    <TextView
        android:id="@+id/tvImagen"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center_vertical"
        android:labelFor="@+id/ibImgProducto"
        android:text="@string/imagen"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/ibImgProducto"
        app:layout_constraintEnd_toStartOf="@+id/ibImgProducto"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnGuardarProd"
        style="@style/ButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/guardar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextSizeCheck,VisualLintButtonSize" />

    <ImageButton
        android:id="@+id/ibImgProducto"
        android:layout_width="170dp"
        android:layout_height="141dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="16dp"
        android:src="@android:drawable/ic_menu_gallery"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNuevoProducto"
        tools:ignore="ContentDescription,ImageContrastCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>