<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/violeta_claro"
        app:cardCornerRadius="10dp"
        app:cardElevation="3dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        app:contentPadding="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ConstraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/ivImagenProd"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/desc_producto"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="h,1:1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ImageContrastCheck"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/tvNombre"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/nombre_producto"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/ivImagenProd"
                app:layout_constraintTop_toTopOf="@+id/ivImagenProd" />

            <TextView
                android:id="@+id/tvDescripcion"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:text="@string/descripcion_producto"
                android:textStyle="italic"
                app:layout_constraintBottom_toTopOf="@+id/tvUnidades"
                app:layout_constraintEnd_toEndOf="@+id/tvNombre"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/tvNombre"
                app:layout_constraintTop_toBottomOf="@+id/tvNombre"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/tvCantidad"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:gravity="right|center_vertical"
                android:hint="@string/cantidad_abrev"
                android:inputType="number|numberDecimal"
                android:minHeight="48dp"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@+id/tvPrecio"
                app:layout_constraintEnd_toStartOf="@+id/tvUnidades"
                app:layout_constraintHorizontal_weight="2"
                app:layout_constraintStart_toEndOf="@+id/tvPrecio"
                app:layout_constraintTop_toTopOf="@+id/tvPrecio" />

            <TextView
                android:id="@+id/tvUnidades"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginEnd="8dp"
                android:gravity="start|center_vertical"
                android:hint="@string/unidades_abrev"
                android:minHeight="48dp"
                android:paddingStart="5dp"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@+id/tvCantidad"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_weight="3"
                app:layout_constraintStart_toEndOf="@+id/tvCantidad"
                app:layout_constraintTop_toTopOf="@+id/tvCantidad" />

            <TextView
                android:id="@+id/tvPrecio"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:gravity="center_vertical"
                android:text="@string/precio"
                app:layout_constraintBottom_toBottomOf="@+id/ivImagenProd"
                app:layout_constraintEnd_toStartOf="@+id/tvCantidad"
                app:layout_constraintHeight_min="48dp"
                app:layout_constraintHorizontal_weight="8"
                app:layout_constraintStart_toStartOf="@+id/tvNombre"
                app:layout_constraintTop_toBottomOf="@+id/tvDescripcion"
                app:layout_constraintVertical_bias="0.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>