<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:focusableInTouchMode="true">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#4790CAF9"
        android:focusable="true"
        app:cardCornerRadius="10dp"
        app:cardElevation="0dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        app:contentPaddingBottom="10dp"
        app:contentPaddingLeft="10dp"
        app:contentPaddingRight="5dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ConstraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:minHeight="48dp">

            <EditText
                android:id="@+id/tvNombreLista"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:gravity="top"
                android:minHeight="48dp"
                android:text="@string/nombrelista"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/ibEditarNombre"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="Autofill,LabelFor,VisualLintTextFieldSize" />

            <ImageButton
                android:id="@+id/ibEditarNombre"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginEnd="100dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/editar_nombre"
                android:focusable="true"
                app:layout_constraintBottom_toBottomOf="@+id/tvNombreLista"
                app:layout_constraintEnd_toStartOf="@+id/ibMenuOpciones"
                app:layout_constraintStart_toEndOf="@+id/tvNombreLista"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/baseline_edit_24"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

            <!-- Barrier para separar las opciones -->
            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/barrierOpciones"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:barrierDirection="start"
                app:constraint_referenced_ids="ibMenuOpciones" />

            <ImageButton
                android:id="@+id/ibMenuOpciones"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/opciones"
                android:focusable="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/barrierOpciones"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/baseline_more_vert_24"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/tvFechaCreacion"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:text="@string/fecha_creacion"
                android:textSize="12sp"
                android:textStyle="italic"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/tvNombreLista"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvNombreLista" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>