<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:focusableInTouchMode="true"
    android:longClickable="true">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#4790CAF9"
        android:focusable="true"
        app:cardCornerRadius="10dp"
        app:cardElevation="0dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        app:contentPaddingBottom="10dp"
        app:contentPaddingLeft="10dp"
        app:contentPaddingRight="10dp"
        app:contentPaddingTop="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ConstraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true">

            <!-- Definimos un Barrier -->
            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/barrier"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:barrierDirection="start"
                app:constraint_referenced_ids="ivFotoContacto" />

            <TextView
                android:id="@+id/tvNombreContacto"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:gravity="start|center_vertical"
                android:minHeight="40dp"
                android:text="@string/nombre_contacto"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/barrier"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="Autofill,LabelFor,VisualLintTextFieldSize" />

            <TextView
                android:id="@+id/tvTelefono"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:gravity="center|start"
                android:text="@string/telefono"
                android:textSize="16sp"
                android:textStyle="italic"
                app:layout_constraintEnd_toStartOf="@+id/barrier"
                app:layout_constraintStart_toStartOf="@+id/tvNombreContacto"
                app:layout_constraintTop_toBottomOf="@+id/tvNombreContacto" />

            <ImageView
                android:id="@+id/ivFotoContacto"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/foto_de_contacto"
                android:scaleType="fitCenter"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/barrier"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="Autofill,LabelFor,VisualLintTextFieldSize,ImageContrastCheck" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>
